--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
+        "files": ["app/Http/Helper/common.php"],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
